@@ -1,3 +1,9 @@
+2004-03-03  Federico Mena Quintero  <federico@ximian.com>
+
+	* gtk/gtkfilesystem.c (gtk_file_system_get_parent): Simplify by
+	not using a temporary variable, and clarify the documentation.
+	Fixes #136008.
+
 2004-03-03  Mark McLoughlin  <mark@skynet.ie>
 
 	* gtk/gtkexpander.c:
